--- a/src/app/task-list/task-list.component.css
+++ b/src/app/task-list/task-list.component.css
@@ -1,4 +1,9 @@
 #task-list{
     display: flex;
     justify-content: center;
+    align-items: center;
+
+}
+#state-button{
+    margin-left: 20px;
 }
